--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
 <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
 <link href="../assets/css/style.css" rel="stylesheet">
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+
+
+
 </head>
 <body>
   <app-root></app-root>
